--- a/python/gen_places_data.ipynb
+++ b/python/gen_places_data.ipynb
@@ -262,12 +262,12 @@
    "source": [
     "# Output all data to CSV\n",
     "manhattan_blocks_spatial_features_gdf.to_csv(\n",
-    "    \"manhattan_block_features.csv\", index=False\n",
+    "    \"../embedding-data/manhattan_block_features.csv\", index=False\n",
     ")\n",
     "\n",
     "# Output all data to GeoJSON\n",
     "manhattan_blocks_spatial_features_gdf.to_file(\n",
-    "    \"manhattan_block_features.geojson\", driver=\"GeoJSON\"\n",
+    "    \"../embedding-data/manhattan_block_features.geojson\", driver=\"GeoJSON\"\n",
     ")"
    ]
   }
