--- a/python/map_embeddings.ipynb
+++ b/python/map_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "d208d4e8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,6 @@
     "import numpy as np\n",
     "\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "from matplotlib.colors import ListedColormap\n",
     "\n",
     "from matplotlib import cm\n",
     "from lonboard._map import Map\n",
@@ -21,13 +20,12 @@
     "from lonboard.colormap import (\n",
     "    apply_continuous_cmap,\n",
     ")\n",
-    "from matplotlib.colors import LogNorm\n",
-    "from palettable.colorbrewer.sequential import PuRd_9"
+    "from matplotlib.colors import LogNorm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "134a22eb",
    "metadata": {},
    "outputs": [
@@ -45,7 +43,8 @@
     }
    ],
    "source": [
-    "mn_blocks_gdf = gpd.read_file(\"manhattan_block_features.geojson\")\n",
+    "mn_blocks_gdf = gpd.read_file(\"../embedding-data/manhattan_block_features.geojson\")\n",
+    "\n",
     "print(mn_blocks_gdf.columns)"
    ]
   },
